2006-06-28  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: clarify \repeatTie.

2006-06-27  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/parser.yy: Wrap non-post-events in EventChords before
	assigning them to identifiers.

2006-06-27  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/bar-line.cc (compound_barline): Fix parenthesis error,
	gives correct vertical placement of \bar ":" in all staff
	sizes. Thanks Martial!

2006-06-26  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/invoking.itely : minor update from mailist.

2006-06-26  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/ various: Introduce stream events of types Prepare,
	OneTimeStep, CreateContext, AnnounceNewContext, RemoveContext,
	ChangeContext, SetProperty, RevertProperty, Override and Revert.

	* lily/global-context*.cc: Time is now -inf before iteration
	starts.

	* lily/include/context.hh: Removed unique_, init_

	* Documentation/topdocs/NEWS: Make the feathered beam example
	avoid triggering a bug.

2006-06-24  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: small additions from mailist.

2006-06-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* ly/performer-init.ly: Add some missing links in the context
	hierarchy for MIDI output. There are probably some more missing!

2006-06-21  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: minor spelling fixes;
	thanks Dave Luttinen!

	* Documentation/user/ various: small clarifications;
	thanks Anthony Youngman!

2006-06-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* po/fr.po: add \n appropriately.

	* lily/lexer.ll: remove ? from version-seen?  

2006-06-19  John Mandereau  <john.mandereau@free.fr>

	* po/fr.po; update translation, by Jean-Charles Malahieude and
	John Mandereau.

2006-06-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* THANKS: add Markus Schneider.

	* lily/tab-staff-symbol-engraver.cc: derive from Engraver, not
	Staff_symbol_engraver
