@@ -481,11 +481,14 @@ Otherwise, return #f."
 		  ;; command_element
 		  (format #f "~{~a ~}" (map-in-order music->lily-string elements))))))))
 
-(define-display-method MultiMeasureRestMusicGroup (mmrest)
-  (format #f "~{~a ~}"
-	  (map-in-order music->lily-string 
-			(remove (make-music-type-predicate 'BarCheck)
-				(ly:music-property mmrest 'elements)))))
+(define-display-method MultiMeasureRest (mmrest)
+  (let* ((dur (ly:music-property mmrest 'duration))
+	 (ly (format #f "R~a~{~a ~}"
+		     (duration->lily-string dur)
+		     (map-in-order music->lily-string
+				   (ly:music-property mmrest 'articulations)))))
+    (*previous-duration* dur)
+    ly))
 
 (define-display-method SkipMusic (skip)
   (format #f "\\skip ~a" (duration->lily-string (ly:music-property skip 'duration) #:force-duration #t)))
@@ -547,7 +550,7 @@ Otherwise, return #f."
 
 (define-display-method MetronomeChangeEvent (tempo)
   (format #f "\\tempo ~a = ~a"
-	  (duration->lily-string (ly:music-property tempo 'tempo-unit) #:force-duration #f #:prev-duration #f)
+	  (duration->lily-string (ly:music-property tempo 'tempo-unit) #:force-duration #t #:prev-duration #f)
 	  (ly:music-property tempo 'metronome-count)))
 
 (define-display-method KeyChangeEvent (key)
